--- a/travel/travelplan/templates/travel_app/write.html
+++ b/travel/travelplan/templates/travel_app/write.html
@@ -18,7 +18,7 @@
         {% block content %}
           <div class="about-trade">
             <div class="container">
-              {% comment %} <form class="write-box" method="POST" action="{% if post %}{% url 'dangun_app:edit' post.id %}{% else %}{% url 'dangun_app:create_form' %}{% endif %}" enctype="multipart/form-data"> {% endcomment %}
+              <form class="write-box" method="POST" action="{% if post %}{% url 'dangun_app:edit' post.id %}{% else %}{% url 'travel_app:create_form' %}{% endif %}" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="flex-box">
                   <label class="img-upload">
@@ -64,5 +64,6 @@
         <script type="text/javascript" src="{% static 'js/write.js' %}"></script>
 
       </body>
+      
 
     </html>
