add crud 에서 cru 가능?

--- a/travel/travelplan/static/css/write.css
+++ b/travel/travelplan/static/css/write.css
@@ -33,3 +33,10 @@
     background-color: #42f7e2;
     cursor: pointer;
 }
+
+.post-box img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+}
