--- a/travel/travelplan/templates/registration/register.html
+++ b/travel/travelplan/templates/registration/register.html
@@ -5,35 +5,26 @@
 
   <head>
     <meta charset="UTF-8"/>
+    <title>회원가입</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/global.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/nav.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/footer.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}"/>
-    <style>       
-      .errorlist {
-      /* background-color: #f44336; */
-      border-radius: 100px;
-      border: none;
-      color: #f44336;
-      font-size: 16px;
-      font-weight: 700;
-      pointer-events: none;
-      }
-  
-      </style>
-    <title>회원가입</title>
   </head>
-
+  
   <body class="back-ye">
     <div class="container">
         <div class="login-container">
           <form method="post" class="login-form">
             {% csrf_token %}
             {{ form.as_ul }}
-            <button type="submit" class="login-button">등록</button>
+            <button type="submit" class="login-button">회원등록</button>
           </form>
+          <button type="submit" class="login-button">구글등록</button><br>
+          <button type="submit" class="login-button">네이버등록</button><br>
+          <button type="submit" class="login-button">카카오등록</button>
           <p class="register-reco">
             이미 계정이 있으신가요?
             <a href="{% url 'user_app:login' %}" class="bold">로그인</a>
