--- a/travel/travelplan/static/css/nav.css
+++ b/travel/travelplan/static/css/nav.css
@@ -1,11 +1,11 @@
 nav {
     display: flex;
-    align-items: center;
     position: fixed;
     top: 0;
     left: 0;
     background-color: #fff;
     width: 100%;
+    height: 40px;
     z-index: 999;
     color: #000000;
     text-decoration: none;
@@ -14,20 +14,32 @@ nav {
 }
 
 .container {
-    justify-content: space-between;
-}
-
-.box {
     display: flex;
-    /* justify-content: space-between; */
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .logo img {
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
+    margin-left: 10px;
+    margin-right: 20px;
 }
 
 .minibox {
     display: flex;
-    /* justify-content: space-between; */
+    align-items: center;
+}
+
+.minibox2 {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 20px;
+    gap: 5px;
+}
+
+.form-control {
+    height: 35px;
 }
