--- a/travel/travelplan/templates/travel_app/nav.html
+++ b/travel/travelplan/templates/travel_app/nav.html
@@ -1,16 +1,15 @@
 {% load static %}
 <nav>
     <div class="container">
-        <div class="box minibox between">
             <div class="minibox">
                 <div class="logo">
                     <a href="{% url 'travel_app:main' %}">
                     <img src="{% static 'img/logo.png' %}" alt=""/>
                     </a>
-                </div>
-                당신의 계획을 이곳에!
+                </div><p>당신의 계획을 이곳에!</p>
             </div>
-            <div class="minibox">
+            <div class="minibox2">
+                <input class="form-control" type="search" placeholder="Search" aria-label="Search">
                 {% if user.is_authenticated %}
                     <span>{{user.nickname}}</span>
                     <a href="{% url 'user_app:logout' %}" class="ghost-button">로그아웃</a>
@@ -19,5 +18,4 @@
                 {% endif %}
             </div>
         </div>    
-    </div>
 </nav>
