--- a/travel/travelplan/templates/travel_app/footer.html
+++ b/travel/travelplan/templates/travel_app/footer.html
@@ -1,25 +1,26 @@
+{% load static %}
 <div class = 'footer'>
-    <div>
-        <div>
-            i'm footer
-            i'm footer
-            i'm footer
-            i'm footer
-            i'm footer
+    <div class = 'foot-container'>
+        <div class ='foot-box'>
+            <p class="bold-text">오르미2기</p>
+            <p>수강생</p>
+            <p>민중원</p>
+            <p>입니다.</p>
+            <img src="{% static 'img/minioreumi.png' %}" alt="미니오르미" class='mini'>
         </div>
-        <div>
-            i'm footer
-            i'm footer
-            i'm footer
-            i'm footer
-            i'm footer
+        <div class ='foot-box'>
+            <p class="bold-text">오르미2기 프로젝트</p>
+            <p>유튜브 클론 프로젝트</p>
+            <p>블로그 프로젝트</p>
+            <p>당근마켓 클론 프로젝트</p>
+            <p>파이널 프로젝트</p>
         </div>
-        <div>
-            i'm footer
-            i'm footer
-            i'm footer
-            i'm footer
-            i'm footer
+        <div class ='foot-box'>
+            <p class="bold-text">안되는것들</p>
+            <p>검색 안되요..</p>
+            <p>GPT대화 안되요..</p>
+            <p>채팅필요해요?</p>
+            <p>사진여러개는 준비중..</p>
         </div>
     </div>
 </div>
