--- a/travel/travelplan/templates/registration/login.html
+++ b/travel/travelplan/templates/registration/login.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/nav.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/footer.css' %}"/>
+    <link rel="icon" href="{% static 'img/favicon.png'%}">
   </head>
 
   <body>
