--- a/travel/travelplan/templates/travel_app/write.html
+++ b/travel/travelplan/templates/travel_app/write.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% static "css/main.css" %} ">
     <link rel="stylesheet" type="text/css" href="{% static "css/write.css" %} ">    
     <link rel="stylesheet" type="text/css" href="{% static "css/footer.css" %} ">
+    <link rel="icon" href="{% static 'img/favicon.png'%}">
   </head>
 
   <body>
