--- a/travel/travelplan/static/css/post.css
+++ b/travel/travelplan/static/css/post.css
@@ -59,3 +59,22 @@
     color: #fff;
     cursor: pointer;
 }
+
+.floating-button {
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    background-color: #36d1bf;
+    border-radius: 25%;
+    width: 80px;
+    height: 80px;
+    text-align: center;
+    font-weight: 800;
+    text-decoration: none;
+    font-size: 13px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    z-index: 1000;
+}
